# samsara-fleet-lite

./: .pre-commit-config.yaml  AGENTS.md  README.md  config.py  external-id-implementation-guide.md  models.py  pyproject.toml  requirements.txt  usage_guide.md
data/: 20250729080154_New Hires Report_fef55a94_.xlsx  20250805080206_New Terms Report_3086494f_.xlsx  locations.csv
src/: __init__.py  add_drivers.py  deactivate_drivers.py  file_finder.py  main.py  mapping_loader.py  migrate_external_ids.py  models.py  payroll_reader.py  samsara_client.py  sync_usernames.py  transformer.py  username_manager.py
tests/: conftest.py  test_cli.py  test_config.py  test_external_ids.py  test_file_finder.py  test_main_cli.py  test_mapping_loader.py  test_migrate_external_ids.py  test_models.py  test_payroll_reader.py  test_samsara_client.py  test_sync_usernames_cli.py  test_transformer.py  test_username_manager.py
